@@ -1,3 +1,7 @@
+-------------------------- soilDB 0.4 (2012-01-20) ----------------------------
+* new wide-formatted, boolean representation of diagnostic horizon data
+* queries standardized between NASIS/PedonPC
+
 -------------------------- soilDB 0.3-3 (2012-01-10) --------------------------
 * SDA_query() now functional on MacOS/UNIX-like OSes with (SSOAP 0.8-1, XMLSchema 0.6-0, and XML 3.7-1)
   - thanks to D.T. Lang for the updates!
